--- a/src/Pages/history.css
+++ b/src/Pages/history.css
@@ -32,7 +32,7 @@
 }
 
 .history-item {
-  width: 80%; /* Make list items shorter */
+  width: 80%;
   padding: 12px 20px;
   background-color: #e8daff;
   border-radius: 8px;
