--- a/src/Pages/main.css
+++ b/src/Pages/main.css
@@ -56,22 +56,22 @@
 }
 
 .loading {
-  /* Center loading text */
+  
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 20px; /* Match font size with search input */
-  color: #fff; /* Match text color with search input */
-  padding: 12px; /* Match padding with search input */
-  border-radius: 15px; /* Match border radius with search input */
+  font-size: 20px; 
+  color: #fff; 
+  padding: 12px;
+  border-radius: 15px; 
   background: linear-gradient(
     135deg,
     #c4c0d8,
     #9370db
-  ); /* Match background with search input */
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Match box shadow with search input */
-  width: 350px; /* Match width with search input */
-  margin-bottom: 20px; /* Match margin with search input */
+  ); 
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); 
+  width: 350px; 
+  margin-bottom: 20px;
 }
 
 .close:hover {
